--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,10 +42,14 @@
     <div class="row">
       <div class="span10 center">
         <% flash.each do |name, msg| %>
-          <%= content_tag :div, msg, id: "flash_#{name}" %>
+          <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+            <a class="close" data-dismiss="alert">x</a>
+            <%= msg %>
+          </div>
         <% end %>
 
         <%= yield %>
+        <%= debug params %> 
       </div>
     </div>
   </div>
