--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,29 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
-  <%= devise_error_messages! %>
+<%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+  <%= f.error_notification %>
 
-  <%= f.input :username %>
+  <div class="form-inputs">
+    <%= f.input :email, :required => true, :autofocus => true %>
 
-  <%= f.input :email %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+    <%= f.input :password_confirmation, :required => false %>
+    <% if f.object.encrypted_password.present? %>
+      <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>  
+    <% end %> 
+  </div>
 
-  <%= f.input :username, inline_label: "(leave blank if you don't want to change it)", :autocomplete => "off"%>
-
-  <%= f.input :password_confirmation %>
-
-  <%= f.input:current_password, inline_label: "(we need your current password to confirm your changes)" %>
- 
   <div class="form-actions">
-    <%= f.button :submit, "Update", class: 'btn btn-primary' %>
+    <%= f.button :submit, "Update", :class => "btn btn-primary"%>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :html => {:class => 'btn' } %></p>
+<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "Back", :back %>
