--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
             <% else %>
               <li> <%= link_to 'Sign up', new_user_registration_path %> </li>
               <li> <%= link_to "Login", new_user_session_path %> </li>
+              <li> <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %> </li>
             <% end %>
             </ul>
           </nav>
