Added google auth and icons for the providers in a new providers list partial

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -6,6 +6,11 @@ body { padding-top: 60px; }
 
 .center { float: none; margin-left: auto; margin-right: auto; }
 
+.provider-list { font-size: 31.5px; margin-left: 180px; }
+.provider-list ul { margin: 0px; list-style: none;}
+.google-icon { color: red; }
+.twitter-icon { color: #2C77BA; }
+
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
 @iconWhiteSpritePath: image-url("twitter/bootstrap/glyphicons-halflings-white.png");
