--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<h2>Sign up</h2>
+<%= render "partials/provider_list" %>
 
+<h3> Or sign up for a Grasp account </h3>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
