--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand pull-left" href="#">Grasp</a>
+        <a class="brand pull-left" href="/">Grasp</a>
         <div class="nav-collapse">
           <nav>
             <ul class="nav pull-left">
