--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,3 +30,4 @@
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_article_path,
             :class => 'btn btn-primary' %>
+<%= link_to 'Import', import_articles_path, :class => 'btn' %>
