--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,10 @@
 <%- model_class = Article -%>
+<article>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%= @article.title %></h1>
 </div>
-
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd><%= @article.title %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:content) %>:</strong></dt>
-  <dd><div class="entry"><%= sanitize @article.content %></div></dd>
-</dl>
+<div class="entry"><%= sanitize @article.content %></div>
+</article>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
