--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,10 +1,3 @@
-<script>
-  function copyContent (){
-    $("input[name='article[title]']").val($("#article-entry :first-child").text());
-    $("input[name='article[content]']").val($("#article-entry :not(:first-child)").html());
-    return true;
-  }
-</script>
 <%= simple_form_for @article, :html => { :class => 'form-horizontal', :onsubmit=> 'return copyContent()', novalidate: true } do |f| %>
   <%= f.error_notification %>
   <% if f.object.errors.any? %>
@@ -22,15 +15,15 @@
   <section class="g-body">
     <article class="entry" id="article-entry" contenteditable="true">
       <% if f.object.title? %>
-        <h1> <%= f.object.title %></h1>
+        <h1> <%= sanitize f.object.title %></h1>
       <% else %>
         <h1> Title </h1>
       <% end %>
       
       <% if f.object.content? %>
-        <p> <%= f.object.content %></p>
+        <%= sanitize f.object.content %>
       <% else %>
-        <p> Body</p>
+        <p> Body </p>
       <% end %>
     </article>
   </section>
