--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,7 @@
 <div class="page-header">
   <h1><%= @article.title %></h1>
 </div>
-<div class="entry"><%= sanitize @article.content %></div>
+<div class="entry"><%= sanitize @article.content, attributes: %w(id class href src) %></div>
 </article>
 
 <div class="form-actions">
