--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,12 @@
-<%= render "partials/provider_list" %>
-
-<h3> Or sign up for a Grasp account </h3>
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  
+  <% if f.error_notification.nil? %>
+    <%= render "partials/provider_list" %>
+
+    <h3> Or sign up for a Grasp account </h3>
+  <% else %>
+    <h3> Sign up for a Grasp account </h3>
+  <% end %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
