--- a/app/views/partials/_provider_list.html.erb
+++ b/app/views/partials/_provider_list.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign in with</h2>
-<div class="provider-list">  
-  <ul>
+<div class="provider-list form-horizontal">  
+  <ul class="form-actions">
     <li class="btn btn-large"><a href="<%=user_omniauth_authorize_path(:google_oauth2) %>" class="google-icon"><i class="icon-google-plus-sign"></i> Google</a></li>
     <li class="btn btn-large"><a href="<%= user_omniauth_authorize_path(:twitter) %>" class="twitter-icon"><i class="icon-twitter-sign"></i> Twitter</a></li>
   </ul>
