--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,21 +1,22 @@
-<%- model_class = Article -%>
+<%- model_class = Note -%>
 <article>
-  <div class="page-header">
-    <h1><%= @article.title %></h1>
-  </div>
-  <div class="entry">
-    <%= sanitize @article.content, attributes: %w(id class href src) %>
-  </div>
+<div class="page-header">
+  <h1><%= @note.block %></h1>
+</div>
+<div class="entry">
+  <%= sanitize @note.content, attributes: %w(id class href src) %>
+  <p> <%= @note.selection %> </p>
+</div>
+
 </article>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              articles_path, :class => 'btn'  %>
+              article_notes_path(@note.article), :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_article_path(@article), :class => 'btn' %>
-  <%= link_to 'Notes', article_notes_path(@article), :class => 'btn' %>
+              edit_article_note_path(@note.article, @note), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              article_path(@article),
+              article_note_path(@note.article, @note),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
