--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -24,12 +24,23 @@ body {
 
 .center { float: none; margin-left: auto; margin-right: auto; max-width: 700px; }
 
-.provider-list ul { margin: 0px; list-style: none;}
-.google-icon { color: red; }
-.twitter-icon { color: #2C77BA; }
-article {
-  outline-style: none;
+.provider-list {
+  ul { 
+    margin: 0px; list-style: none;
+  }
+  li {
+    display: inline-block;
+  }
 }
+.google-icon { color: red; }
+
+.twitter-icon { color: #2C77BA; }
+
+[contenteditable="true"]:active, [contenteditable="true"]:focus{
+  border:none;
+  outline:none;
+}
+
 .entry {
   font-family: "Lora",Georgia,Cambria,"Times New Roman",Times,serif;
   font-weight: 400;
@@ -47,6 +58,11 @@ h1 {
   letter-spacing: -1px;
 }
 
+article {
+  .placeholder {
+    color: #B3B3B1;
+  }
+}
 .text-menu.hide {
   display: block;
 }
